Fixed overflow of the body

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@
 
 body {
   background-color: #151617;
+  overflow: overlay;
 
   & #__next {
     height: 100%;
@@ -18,7 +19,7 @@ body {
 }
 
 html {
-  width: 100vw;
+  width: 100%;
   margin: 0px;
   padding: 0px;
   min-height: 100%;
